--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -3,6 +3,7 @@ $white: #ffffff;
 $red: #eb5757;
 $red1: #e7192e;
 $blue: #1d346a;
+$green: #407946;
 $lightGray1: #f5f6fb;
 $lightGray2: #f6f7fb;
 $lightGray3: #fefefe;
