--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -10,6 +10,8 @@ $lightGray3: #fefefe;
 $lightGray4: #fafbfd;
 $lightGray5: #f6f7fc;
 $lightGray6: #c7ccdc;
+$lightGray7: #f5f6fa;
+$lightGray8: #e0e5eb;
 $darkGray: #52555f;
 $orange: #ff751d;
 $orangeLight: #ffdac0;
