--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -3,6 +3,10 @@ html {
   @include fontProperty();
 }
 
+body {
+  margin: 0;
+}
+
 .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
