--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -1,4 +1,6 @@
 @import './base/normalize';
+@import './utils/reset';
+@import './fonts/fonts';
 @import './utils/breakpoints';
 @import './utils/variables';
 @import './utils/mixins';
