--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -12,6 +12,7 @@ $lightGray5: #f6f7fc;
 $lightGray6: #c7ccdc;
 $lightGray7: #f5f6fa;
 $lightGray8: #e0e5eb;
+$lightGray9: #a6abb9;
 $darkGray: #52555f;
 $orange: #ff751d;
 $orangeLight: #ffdac0;
