--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,6 +1,8 @@
-$btnShadowActive: 0px 10px 60px rgba(170, 178, 197, 0.2);
-$btnShadowNormal: 0px 10px 60px rgba(170, 178, 197, 0.2);
-$backgroundBoxBalance: linear-gradient(
+$btnShadowActive: 1px 3px 5px rgba(255, 107, 8, 0.35);
+$btnShadowNormal: 1px 3px 5px rgba(82, 85, 95, 0.15);
+$googleBtnShadow: 1px 2px 3px rgba(170, 178, 197, 0.2);
+$shadowAuthBox: 5px 10px 20px rgba(170, 178, 197, 0.4);
+$backgroundBalanceBox: linear-gradient(
   117.84deg,
   #1d346a 2.84%,
   #031634 67.28%
