--- a/src/components/AuthForm/AuthForm.module.scss
+++ b/src/components/AuthForm/AuthForm.module.scss
@@ -1,1 +1,163 @@
 @import 'styles/shared.scss';
+
+.formBox {
+  position: absolute;
+  top: 200px;
+  left: 0;
+  right: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  width: 300px;
+  height: 525px;
+  margin: auto;
+  border-radius: 30px;
+  background-color: $white;
+  background-color: hsla(0, 0%, 100%, 0.9);
+  box-shadow: $shadowAuthBox;
+
+  @include tablet() {
+    top: 241px;
+
+    width: 436px;
+    height: 535px;
+  }
+
+  @include desktop() {
+    top: 117px;
+    right: 110px;
+    left: auto;
+
+    width: 436px;
+    height: 542px;
+  }
+}
+
+.buttonGoogle {
+  display: flex;
+  align-items: center;
+  width: 125px;
+  height: 44px;
+  padding: 10px 20px;
+  margin-top: 24px;
+  margin-bottom: 30px;
+
+  color: $darkGray;
+  background-color: $lightGray1;
+
+  border: 2px solid $lightGray5;
+  border-radius: 16px;
+  box-shadow: $btnShadowNormal;
+  outline: none;
+}
+
+.googleLogo {
+  width: 17px;
+  height: 18px;
+  margin-right: 10px;
+
+  background-image: url(../../images/img/auth-page/google-logo.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: url(../../images/img/auth-page/google-logo-2x.png);
+  }
+}
+
+.btnText {
+  @include fontProperty(
+    $color: $black,
+    $weight: 500,
+    $size: 14px,
+    $height: 1.14,
+    $letter-spacing: 0.02em
+  );
+}
+
+.googleText {
+  @include fontProperty($size: 10px, $height: 1.12);
+
+  @include tablet() {
+    @include fontProperty($size: 12px, $height: 1.17);
+  }
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 24px;
+}
+
+.label {
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 12px;
+
+  @include fontProperty(
+    $color: $black,
+    $size: 10px,
+    $height: 1.12,
+    $text-align: left
+  );
+
+  @include tablet() {
+    @include fontProperty(
+      $color: $black,
+      $size: 12px,
+      $height: 1.17,
+      $text-align: left
+    );
+  }
+}
+
+.input {
+  display: block;
+  width: 213px;
+  height: 18px;
+  margin-bottom: 4px;
+  padding: 17px 20px;
+  border: none;
+  border-radius: 30px;
+  outline: none;
+  background-color: $lightGray2;
+
+  &::placeholder {
+    @include fontProperty(
+      $color: $lightGray9,
+      $size: 14px,
+      $height: 1.14,
+      $text-align: left
+    );
+  }
+
+  @include tablet() {
+    width: 225px;
+  }
+}
+
+.inputPassword {
+  composes: input;
+}
+
+.error {
+  margin-bottom: 30px;
+
+  @include fontProperty(
+    $size: 10px,
+    $color: $red,
+    $height: 1.12,
+    $text-align: left
+  );
+}
+
+.errorPassword {
+  composes: error;
+  margin-bottom: 40px;
+}
