--- a/src/pages/AuthPage/AuthPage.module.scss
+++ b/src/pages/AuthPage/AuthPage.module.scss
@@ -1,6 +1,7 @@
 @import 'styles/shared.scss';
 
 .authBox {
+  position: relative;
   display: block;
   justify-content: center;
   width: 100%;
@@ -18,9 +19,8 @@
   @include tablet() {
     background: url(../../images/img/auth-page/main_logo-tablet.png),
       url(../../images/img/auth-page/auth_page-cabbage-tablet.png),
-      url(../../images/img/auth-page/auth_page-small_cabbage-tablet.png),
       url(../../images/img/auth-page/auth_page-bg-tablet.png);
-    background-position: 171px 90px, 0px 30px, 105px 770px, 0px 0px;
+    background-position: 171px 90px, 0px 30px, 0px 0px;
     background-repeat: no-repeat;
   }
 
@@ -33,4 +33,30 @@
 
     background-repeat: no-repeat;
   }
+}
+
+.doubleCabbageBox {
+  position: absolute;
+  top: 770px;
+  left: 105px;
+
+  width: 183px;
+  height: 142px;
+
+  @include mobile() {
+    display: none;
+  }
+
+  @include tablet() {
+    display: block;
+    z-index: 999;
+  }
+
+  @include desktop() {
+    display: none;
+  }
+}
+
+.doubleCabbageImg {
+  width: 100%;
 }
