--- a/src/components/Balance/Balance.module.scss
+++ b/src/components/Balance/Balance.module.scss
@@ -1,1 +1,50 @@
 @import 'styles/shared.scss';
+
+// .balanceBox {
+//   margin-left: auto;
+//   margin-right: auto;
+// }
+
+.balanceTitle {
+  margin-bottom: 6px;
+
+  @include fontProperty($weight: 500, $letter-spacing: 0.02em);
+}
+
+.balanceFormInput {
+  width: 125px;
+  height: 44px;
+  padding: 12px 17px;
+
+  border: 2px solid $white;
+  border-right: 1px solid $white;
+  border-radius: 22px 0px 0px 22px;
+  background: transparent;
+
+  @include fontProperty($weight: 700, $color: $black, $letter-spacing: 0.02em);
+}
+
+.balanceFormBtn {
+  width: 125px;
+  height: 44px;
+  padding: 12px 17px;
+
+  border: 2px solid $white;
+  border-left: 1px solid $white;
+  border-radius: 0px 22px 22px 0px;
+  background: transparent;
+  cursor: pointer;
+
+  @include fontProperty($transform: uppercase, $letter-spacing: 0.02em);
+
+  transition: border-color 0.25s, background-color 0.25s $cubicBezier;
+}
+
+.balanceFormBtn:hover,
+.balanceFormBtn:focus {
+  background-color: $orange;
+  color: $white;
+  border: $orange;
+
+  transition: border-color 0.25s, background-color 0.25s $cubicBezier;
+}
