--- a/src/styles/fonts/_fonts.scss
+++ b/src/styles/fonts/_fonts.scss
@@ -11,43 +11,43 @@
       format('truetype'); /* Safari, Android, iOS */
 }
 
-/* roboto-regular - latin */
+/* roboto-regular - latin_cyrillic */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   src: local(''),
-    /* IE6-IE8 */ url('../../fonts/roboto-v30-latin-regular.woff2')
+    /* IE6-IE8 */ url('../../fonts/roboto-v30-latin_cyrillic-regular.woff2')
       format('woff2'),
-    /* Super Modern Browsers */ url('../../fonts/roboto-v30-latin-regular.woff')
-      format('woff'),
-    /* Modern Browsers */ url('../../fonts/roboto-v30-latin-regular.ttf')
+    /* Super Modern Browsers */
+      url('../../fonts/roboto-v30-latin_cyrillic-regular.woff') format('woff'),
+    /* Modern Browsers */
+      url('../../fonts/roboto-v30-latin_cyrillic-regular.ttf')
       format('truetype');
-  /* Safari, Android, iOS */
 }
-/* roboto-700 - latin */
+/* roboto-700 - latin_cyrillic */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   src: local(''),
-    /* IE6-IE8 */ url('../../fonts/roboto-v30-latin-700.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../../fonts/roboto-v30-latin-700.woff')
-      format('woff'),
-    /* Modern Browsers */ url('../../fonts/roboto-v30-latin-700.ttf')
+    /* IE6-IE8 */ url('../../fonts/roboto-v30-latin_cyrillic-700.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('../../fonts/roboto-v30-latin_cyrillic-700.woff') format('woff'),
+    /* Modern Browsers */ url('../../fonts/roboto-v30-latin_cyrillic-700.ttf')
       format('truetype');
-  /* Safari, Android, iOS */
 }
-/* roboto-900 - latin */
+/* roboto-900 - latin_cyrillic */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 900;
   src: local(''),
-    /* IE6-IE8 */ url('../../fonts/roboto-v30-latin-900.woff2') format('woff2'),
-    /* Super Modern Browsers */ url('../../fonts/roboto-v30-latin-900.woff')
-      format('woff'),
-    /* Modern Browsers */ url('../../fonts/roboto-v30-latin-900.ttf')
+    /* IE6-IE8 */ url('../../fonts/roboto-v30-latin_cyrillic-900.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('../../fonts/roboto-v30-latin_cyrillic-900.woff') format('woff'),
+    /* Modern Browsers */ url('../../fonts/roboto-v30-latin_cyrillic-900.ttf')
       format('truetype');
-  /* Safari, Android, iOS */
 }
