--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -2,7 +2,7 @@ $black: #000000;
 $white: #ffffff;
 $red: #eb5757;
 $red1: #e7192e;
-$blue: #1d346a;
+$blue: #152b5a;
 $green: #407946;
 $lightGray1: #f5f6fb;
 $lightGray2: #f6f7fb;
