--- a/src/styles/utils/_reset.scss
+++ b/src/styles/utils/_reset.scss
@@ -1,8 +1,31 @@
+.visually-hidden:not(:focus):not(:active),
+input[type='checkbox'].visually-hidden,
+input[type='radio'].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 *,
 *::before,
 *::after {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 a {
@@ -10,12 +33,14 @@ a {
 }
 
 ul,
-li,
-ol,
-div {
-  margin: 0;
-  padding: 0;
+li {
   list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 h1,
@@ -23,29 +48,6 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6 {
   margin: 0;
-  padding: 0;
-}
-
-​img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-button:hover {
-  cursor: pointer;
-}
-
-button:focus {
-  outline: none;
-}
-
-input:focus,
-input:active,
-button:active,
-button:focus {
-  outline: none;
 }
