--- a/src/common/elements/Balance/Balance.module.scss
+++ b/src/common/elements/Balance/Balance.module.scss
@@ -1,9 +1,8 @@
 @import 'styles/shared.scss';
 
-// .balanceBox {
-//   margin-left: auto;
-//   margin-right: auto;
-// }
+.balanceBox {
+  margin-bottom: 40px;
+}
 
 .balanceTitle {
   margin-bottom: 6px;
