add expensesPage for mobile

--- a/src/common/elements/Balance/Balance.module.scss
+++ b/src/common/elements/Balance/Balance.module.scss
@@ -21,6 +21,10 @@
   background: transparent;
 
   @include fontProperty($weight: 700, $color: $black, $letter-spacing: 0.02em);
+
+  &::placeholder {
+    opacity: 1;
+  }
 }
 
 .balanceFormBtn {
