--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -13,6 +13,7 @@ $lightGray6: #c7ccdc;
 $lightGray7: #f5f6fa;
 $lightGray8: #e0e5eb;
 $lightGray9: #a6abb9;
+$lightGray10: #fefefe;
 $darkGray: #52555f;
 $orange: #ff751d;
 $orangeLight: #ffdac0;
