--- a/src/common/elements/GoBackLink/GoBackLink.module.scss
+++ b/src/common/elements/GoBackLink/GoBackLink.module.scss
@@ -6,6 +6,10 @@
   margin-top: 15px;
   margin-left: 18px;
   margin-bottom: 15px;
+
+  @include tablet() {
+    display: none;
+  }
 }
 
 .goBackLink {
