--- a/src/components/TransactionList/TransactionList.module.scss
+++ b/src/components/TransactionList/TransactionList.module.scss
@@ -1,6 +1,54 @@
 @import 'styles/shared.scss';
 
-.expensesListBox {
+.expListBox {
+  width: 607px;
+  height: 346px;
+  border: 2px solid $lightGray1;
+  border-top: none;
+  border-right: 6px solid #f5f6fb;
+  border-bottom: none;
+}
+
+.expListHeader {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  width: 607px;
+  height: 40px;
+  margin-top: 50px;
+  background-color: $lightGray1;
+  border-radius: 22px 22px 0px 0px;
+}
+
+.expListHeaderItem {
+  @include fontProperty(
+    $weight: 700,
+    $transform: uppercase,
+    $letter-spacing: 0.02em,
+    $color: $black
+  );
+}
+
+.expListItemBox {
   height: 150px;
   overflow-y: scroll;
+
+  @include tablet {
+    width: 605px;
+    height: 346px;
+  }
+}
+
+.expListItemBox::-webkit-scrollbar {
+  width: 6px;
+
+  border-radius: 2px;
+  background: transparent;
+}
+
+.expListItemBox::-webkit-scrollbar-thumb {
+  background-color: $orange;
+  border-radius: 2px;
+  height: 130px;
 }
