--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,6 +3,7 @@ $btnShadowNormal: 1px 3px 5px rgba(82, 85, 95, 0.15);
 $googleBtnShadow: 1px 2px 3px rgba(170, 178, 197, 0.2);
 $shadowAuthBox: 5px 10px 20px rgba(170, 178, 197, 0.4);
 $shadowCategoryBox: 0px 3px 4px rgba(170, 178, 197, 0.4);
+$shadowProductFormBox: 0px 10px 60px rgba(170, 178, 197, 0.2);
 
 $backgroundBalanceBox: linear-gradient(
   117.84deg,
