--- a/src/common/elements/Calendar/Calendar.module.scss
+++ b/src/common/elements/Calendar/Calendar.module.scss
@@ -17,6 +17,10 @@
     margin-right: 33px;
     margin-bottom: 0;
   }
+
+  @include desktop {
+    margin-right: 23px;
+  }
 }
 
 .calendarIconBox {
