--- a/src/common/elements/NavTransaction/NavTransaction.module.scss
+++ b/src/common/elements/NavTransaction/NavTransaction.module.scss
@@ -55,6 +55,11 @@
   }
 }
 
+.activeLink {
+  composes: navTransactionLink;
+  color: $orange;
+}
+
 .navTransactionLinkIncomes {
   composes: navTransactionLink;
   margin-right: 0;
