--- a/src/components/TransactionListItem/TransactionListItem.module.scss
+++ b/src/components/TransactionListItem/TransactionListItem.module.scss
@@ -3,9 +3,9 @@
 .expListItem {
   position: relative;
   width: 282px;
-  height: auto;
   margin-left: auto;
   margin-right: auto;
+  height: auto;
   padding-bottom: 7px;
 
   border-bottom: 2px solid $lightGray1;
@@ -14,6 +14,10 @@
     width: 599px;
     height: 40px;
     padding-bottom: 0;
+  }
+
+  @include desktop {
+    width: 754px;
   }
 }
 
@@ -68,7 +72,7 @@
 
 .expListItemCategory {
   margin-top: 32px;
-  margin-right: 80px;
+  margin-right: 75px;
 
   @include fontProperty($size: 8px, $height: 1.125, $transform: uppercase);
 
@@ -82,6 +86,8 @@
 }
 
 .expListItemPrice {
+  width: 60px;
+
   margin-top: auto;
   margin-right: 20px;
   margin-bottom: auto;
