--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -46,7 +46,7 @@
 .logoutImg {
   width: 16px;
   height: 16px;
-  fill: #cbccd0;
+  fill: $lightGray11;
 
   transition: fill 0.25s $cubicBezier;
 
