--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -2,6 +2,7 @@ $black: #000000;
 $white: #ffffff;
 $red: #eb5757;
 $red1: #e7192e;
+$red2: #e53935;
 $blue: #152b5a;
 $green: #407946;
 $lightGray1: #f5f6fb;
@@ -14,6 +15,8 @@ $lightGray7: #f5f6fa;
 $lightGray8: #e0e5eb;
 $lightGray9: #a6abb9;
 $lightGray10: #fefefe;
+$lightGray11: #cbccd0;
 $darkGray: #52555f;
 $orange: #ff751d;
+$orangeLight: #fed9bf;
 $orangeLight: #ffdac0;
