--- a/src/common/elements/Balance/Balance.module.scss
+++ b/src/common/elements/Balance/Balance.module.scss
@@ -15,6 +15,13 @@
   }
 }
 
+.balanceForm {
+  @include desktop() {
+    display: flex;
+    align-items: center;
+  }
+}
+
 .balanceTitle {
   margin-bottom: 6px;
 
