--- a/src/pages/ReportIncomesPage/ReportIncomesPage.module.scss
+++ b/src/pages/ReportIncomesPage/ReportIncomesPage.module.scss
@@ -1,6 +1,6 @@
 @import 'styles/shared.scss';
 
-.reportExpensesPageBox {
+.reportIncomesPageBox {
   display: block;
   position: relative;
   justify-content: center;
