--- a/src/components/AuthForm/AuthForm.module.scss
+++ b/src/components/AuthForm/AuthForm.module.scss
@@ -149,6 +149,49 @@
   composes: input;
 }
 
+.buttonEnter {
+  width: 125px;
+  height: 44px;
+  margin-right: 15px;
+
+  @include fontProperty(
+    $transform: uppercase,
+    $weight: 700,
+    $letter-spacing: 0.02em
+  );
+
+  color: $darkGray;
+  background-color: $lightGray1;
+
+  border: 2px solid $lightGray5;
+  border-radius: 16px;
+  box-shadow: $btnShadowNormal;
+  outline: none;
+  cursor: pointer;
+
+  transition: border-color 0.25s, background-color 0.25s $cubicBezier;
+
+  @include tablet {
+    background-color: transparent;
+  }
+}
+
+.buttonAuth {
+  composes: buttonEnter;
+  margin-right: 0;
+}
+
+.buttonEnter:hover,
+.buttonEnter:focus,
+.buttonAuth:hover,
+.buttonAuth:focus {
+  background-color: $orange;
+  color: $white;
+  border: $orange;
+
+  transition: border-color 0.25s, background-color 0.25s $cubicBezier;
+}
+
 .error {
   margin-bottom: 30px;
 
