--- a/src/components/ProductForm/ProductForm.module.scss
+++ b/src/components/ProductForm/ProductForm.module.scss
@@ -253,3 +253,48 @@
     border-left: 1px solid $white;
   }
 }
+
+.buttonInput {
+  width: 125px;
+  height: 44px;
+  margin-right: 15px;
+
+  @include fontProperty(
+    $transform: uppercase,
+    $weight: 700,
+    $letter-spacing: 0.02em
+  );
+
+  color: $darkGray;
+  background-color: $lightGray1;
+
+  border: 2px solid $lightGray5;
+  border-radius: 16px;
+  box-shadow: $btnShadowNormal;
+  outline: none;
+  cursor: pointer;
+
+  transition: border-color 0.25s, background-color 0.25s $cubicBezier;
+
+  @include tablet {
+    background-color: transparent;
+    border: 2px solid $lightGray5;
+    box-shadow: none;
+  }
+}
+
+.buttonClear {
+  composes: buttonInput;
+  margin-right: 0;
+}
+
+.buttonInput:hover,
+.buttonInput:focus,
+.buttonClear:hover,
+.buttonClear:focus {
+  background-color: $orange;
+  color: $white;
+  border: $orange;
+
+  transition: border-color 0.25s, background-color 0.25s $cubicBezier;
+}
